add get user and swagger doc
