# docs/swagger.json
@@ -17,44 +17,348 @@
     "host": "localhost:8080",
     "basePath": "/",
     "paths": {
-        "/examples/ping": {
+        "/api/user/createUser": {
+            "post": {
+                "description": "create user",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "description": "used to set user's name",
+                        "name": "name",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "description": "used to set user's surname",
+                        "name": "surname",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "description": "used to set user's patronymic",
+                        "name": "patronymic",
+                        "in": "body",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "description": "used to set user's address",
+                        "name": "address",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "description": "used to set user's passport",
+                        "name": "passport",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "success response",
+                        "schema": {
+                            "$ref": "#/definitions/handler.Output"
+                        }
+                    },
+                    "400": {
+                        "description": "error",
+                        "schema": {
+                            "$ref": "#/definitions/handler.Output"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/user/deleteUser": {
+            "delete": {
+                "description": "delete user by id",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "description": "used to delete user by id",
+                        "name": "id",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/handler.Output"
+                        }
+                    },
+                    "400": {
+                        "description": "error",
+                        "schema": {
+                            "$ref": "#/definitions/handler.Output"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/user/getUser": {
+            "get": {
+                "description": "gets user by id/name/surname/...",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "used for finding user by id",
+                        "name": "user_id",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "used for finding user by name",
+                        "name": "user_name",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "used for finding user by surname",
+                        "name": "user_surname",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "used for finding user by patronymic",
+                        "name": "user_patronymic",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "used for finding user by address",
+                        "name": "user_address",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "used for finding user by passport",
+                        "name": "user_passport",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "user data",
+                        "schema": {
+                            "$ref": "#/definitions/handler.Output"
+                        }
+                    },
+                    "400": {
+                        "description": "error",
+                        "schema": {
+                            "$ref": "#/definitions/handler.Output"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/user/getUsers": {
+            "get": {
+                "description": "getting users",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "max items on page",
+                        "name": "limit",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "starts from 1",
+                        "name": "page",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "list of users",
+                        "schema": {
+                            "$ref": "#/definitions/handler.Output"
+                        }
+                    },
+                    "400": {
+                        "description": "error",
+                        "schema": {
+                            "$ref": "#/definitions/handler.Output"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/user/labourCosts": {
             "get": {
                 "description": "gives tracks",
                 "consumes": [
                     "application/json"
                 ],
                 "produces": [
-                    "text/plain"
+                    "application/json"
                 ],
-                "tags": [
-                    "example"
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "used for finding tracks",
+                        "name": "user_id",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "used for left edge of dates",
+                        "name": "from",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "used for right edge of dates",
+                        "name": "to",
+                        "in": "query"
+                    }
                 ],
-                "summary": "labour costs",
                 "responses": {
                     "200": {
-                        "description": "pong",
+                        "description": "list of tracks",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/handler.Output"
                         }
                     },
                     "400": {
-                        "description": "ok",
+                        "description": "error",
                         "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "404": {
-                        "description": "ok",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "500": {
-                        "description": "ok",
-                        "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/handler.Output"
                         }
                     }
+                }
+            }
+        },
+        "/api/user/updateUser": {
+            "patch": {
+                "description": "update user by id",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "description": "used to find user by id",
+                        "name": "id",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    },
+                    {
+                        "description": "used to change user's name",
+                        "name": "name",
+                        "in": "body",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "description": "used to change user's surname",
+                        "name": "surname",
+                        "in": "body",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "description": "used to change user's patronymic",
+                        "name": "patronymic",
+                        "in": "body",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "description": "used to change user's address",
+                        "name": "address",
+                        "in": "body",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "description": "used to change user's passport",
+                        "name": "passport",
+                        "in": "body",
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "success response",
+                        "schema": {
+                            "$ref": "#/definitions/handler.Output"
+                        }
+                    },
+                    "400": {
+                        "description": "error",
+                        "schema": {
+                            "$ref": "#/definitions/handler.Output"
+                        }
+                    }
+                }
+            }
+        }
+    },
+    "definitions": {
+        "handler.Output": {
+            "type": "object",
+            "properties": {
+                "data": {},
+                "error": {
+                    "type": "string"
                 }
             }
         }
